瀑布流完成

--- a/compoents/water-flow/index.wxml
+++ b/compoents/water-flow/index.wxml
@@ -1,10 +1,16 @@
 <!-- demo.wxml -->
+<wxs src="../../wxs/price.wxs" module="p"></wxs>
 <l-card full type="cover" image="{{data.img}}" image-mode="widthFix" title="{{data.title}}" l-class="life-container" l-img-class="life-img" l-title-class="life-title" bindtap="onProduct">
     <view class='life-product-contianer'>
         <view class='art-content'>{{data.subtitle}}</view>
         <view class='price-container'>
-            <l-price unit="￥" value="{{data.price}}" value-color="#ad0e11" unit-color="#ad0e11" value-size="36"></l-price>
-            <l-price wx:if="{{data.discount_price}}" l-class="del-price" unit="￥" value="{{data.discount_price}}" value-color="#ad0e11" unit-color="#ad0e11" deleted del-color="#666" value-color="#666" unit-color="#666"></l-price>
+            <view class="tags">
+                <block wx:for="{{tags}}" wx:key="id">
+                    <l-tag type="reading" shape="circle" size="mini" l-class="l-tag">{{item}}</l-tag>
+                </block>
+            </view>
+            <l-price value="{{p.mainPrice(data.price,data.discount_price)}}" value-color="#ad0e11" unit-color="#ad0e11" value-size="36"></l-price>
+            <l-price wx:if="{{data.discount_price}}" deleted value="{{p.sleshedPrice(data.price,data.discount_price)}}" value-color="#ad0e11" unit-color="#ad0e11" del-color="#666" value-color="#666" unit-color="#666"></l-price>
         </view>
     </view>
 </l-card>
