--- a/wxss/sleeve.wxss
+++ b/wxss/sleeve.wxss
@@ -12,3 +12,14 @@
     opacity: 0.8;
     transform: scale(0.85,0.85);
 }
+.spu-bottom{
+    margin-top: 40rpx;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.title-spu-bottom{
+    width: 690rpx;
+    height: 70rpx;
+    margin-bottom: 38rpx;
+}
