--- a/compoents/spu-scroll/index.wxml
+++ b/compoents/spu-scroll/index.wxml
@@ -1,4 +1,5 @@
 <wxs src="../../miniprogram_npm/lin-ui/filter/string.wxs" module="s"></wxs>
+<wxs src="../../wxs/price.wxs" module="p"></wxs>
 <view class="container">
     <image class="title" src="{{theme.title_img}}"></image>
     <scroll-view class="scroll-container" scroll-x>
@@ -7,7 +8,7 @@
                 <view class="spu-container">
                     <image class="spu-img" src="{{item.img}}"></image>
                     <text class="spu-text">{{item.title.length>=8?s.substring(item.title,0,7)+"...":item.title}}</text>
-                    <l-price value="{{item.price}}" l-unit-class="unit" l-value-class="value"></l-price>
+                    <l-price value="{{p.mainPrice(item.price,item.discount_price)}}" l-unit-class="unit" l-value-class="value"></l-price>
                 </view>
             </block>
         </view>
