sku核心算法完成 存档

--- a/compoents/realm/realm.wxml
+++ b/compoents/realm/realm.wxml
@@ -1,7 +1,32 @@
 <view class="container">
-    <view class="detail">
-        <image></image>
+    <view class="sku-preview">
+        <image class="sku-img"></image>
+        <view class="sku-description">
+            <text class="title">测试sku</text>
+            <view>
+                <view class="price-row">
+                    <l-price value="777"
+                             color="#157658"
+                             value-size="28"
+                             unit-size="20"
+                             autofix>
+                    </l-price>
+                    <l-price value="999"
+                             deleted
+                             color="#999999"
+                             value-size="26"
+                             l-class="discount-price">
+                    </l-price>
+                </view>
+                <view class="sku-pending">
+                    <text>请选择:</text>
+                </view>
+            </view>
+        </view>
     </view>
+
+    <view class="hr"></view>
+
     <block wx:for="{{fances}}" wx:key="id">
         <my-fance x="{{index}}" bind:celltap="onCellTap" fance="{{item}}"></my-fance>
     </block>
