--- a/compoents/realm/realm.wxss
+++ b/compoents/realm/realm.wxss
@@ -1,3 +1,36 @@
 .container{
     padding: 30rpx;
+    box-sizing: border-box;
+    background-color: #ffffff;
+}
+.sku-preview{
+    display: flex;
+    flex-direction: row;
+}
+.sku-img{
+    width: 160rpx;
+    height: 160rpx;
+}
+.sku-description{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-left: 40rpx;
+}
+.sku-pending{
+    font-size: 20rpx;
+}
+.discount-price{
+    margin-left: 20rpx;
+}
+.price-row{
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+}
+.hr{
+    width: 690rpx;
+    height: 2rpx;
+    background-color: #E9E9E9;
+    margin-top: 30rpx;
 }
