版本回退测试

--- a/compoents/realm/realm.wxml
+++ b/compoents/realm/realm.wxml
@@ -1,17 +1,19 @@
+<wxs src="../../wxs/price.wxs" module="m"></wxs>
 <view class="container">
     <view class="sku-preview">
-        <image class="sku-img"></image>
+        <image src="{{previewImg}}" class="sku-img"></image>
         <view class="sku-description">
-            <text class="title">测试sku</text>
+            <text class="title">{{title}}</text>
             <view>
                 <view class="price-row">
-                    <l-price value="777"
+                    <l-price value="{{m.mainPrice(price,discount_price)}}"
                              color="#157658"
                              value-size="28"
                              unit-size="20"
                              autofix>
                     </l-price>
-                    <l-price value="999"
+                    <l-price wx:if="{{discount_price}}"
+                             value="{{m.sleshedPrice(price,discount_price)}}"
                              deleted
                              color="#999999"
                              value-size="26"
