--- a/compoents/realm/realm.wxss
+++ b/compoents/realm/realm.wxss
@@ -34,3 +34,13 @@
     background-color: #E9E9E9;
     margin-top: 30rpx;
 }
+.stock{
+    margin-left: 30rpx;
+    font-size: 20rpx;
+    color: #999;
+}
+.stock-pinch{
+    margin-left: 30rpx;
+    font-size: 20rpx;
+    color: #D20109;
+}
