重构 准备联动

--- a/compoents/realm/realm.wxml
+++ b/compoents/realm/realm.wxml
@@ -22,8 +22,11 @@
                     <view wx:if="{{stock && stock >= 10}}" class="stock">库存：{{stock}} 件</view>
                     <view wx:if="{{stock && stock < 10 && stock != 0}}" class="stock-pinch">仅剩：{{stock}} 件</view>
                 </view>
-                <view class="sku-pending">
-                    <text>请选择:</text>
+                <view wx:if="{{!isNoSpecs}}" class="sku-pending">
+                    <text wx:if="{{!isSkuIntact}}">请选择:</text>
+                    <text wx:else="{{isSkuIntact}}">已选择:</text>
+                    <text wx:if="{{!isSkuIntact}}">待选的规格</text>
+                    <text wx:else="{{isSkuIntact}}">已选的规格:</text>
                 </view>
             </view>
         </view>
