sku及联动功能完成

--- a/compoents/realm/realm.wxml
+++ b/compoents/realm/realm.wxml
@@ -21,12 +21,13 @@
                     </l-price>
                     <view wx:if="{{stock && stock >= 10}}" class="stock">库存：{{stock}} 件</view>
                     <view wx:if="{{stock && stock < 10 && stock != 0}}" class="stock-pinch">仅剩：{{stock}} 件</view>
+                    <view wx:if="{{stock == 0}}" class="stock-pinch">已售罄</view>
                 </view>
                 <view wx:if="{{!isNoSpecs}}" class="sku-pending">
-                    <text wx:if="{{!isSkuIntact}}">请选择:</text>
-                    <text wx:else="{{isSkuIntact}}">已选择:</text>
-                    <text wx:if="{{!isSkuIntact}}">待选的规格</text>
-                    <text wx:else="{{isSkuIntact}}">已选的规格:</text>
+                    <text class="sku-pending-tig" wx:if="{{!isSkuIntact}}">请选择:</text>
+                    <text class="sku-pending-tig" wx:else="{{isSkuIntact}}">已选择:</text>
+                    <text class="sku-pending-tigValue" wx:if="{{!isSkuIntact}}">{{missKeys}}</text>
+                    <text class="sku-pending-tigValue" wx:else="{{isSkuIntact}}">{{currentValues}}</text>
                 </view>
             </view>
         </view>
