--- a/compoents/tab-bar/tab-bar.wxml
+++ b/compoents/tab-bar/tab-bar.wxml
@@ -1,12 +1,20 @@
 <view class="container">
     <view class="icons">
         <view bind:tap="onGoToHome">
-            <l-icon name="home" l-class="sleeve"></l-icon>
+                <l-icon size="46" name="home" l-class="sleeve" color="#157658"></l-icon>
+            <text>首页</text>
         </view>
         <view bind:tap="onGoToCart">
-            <l-icon name="mcart" l-class="sleeve"></l-icon>
+            <l-badge>
+                <l-icon size="46" name="mcart" l-class="sleeve" color="#157658"></l-icon>
+            </l-badge>
+            <text>购物车</text>
         </view>
     </view>
-    <view bind:tap="onAddToCart" class="cart btn-font"></view>
-    <view bind:tap="onBuy" class="buy btn-font"></view>
+    <view bind:tap="onAddToCart" class="cart btn-font">
+        <text>加入购物车</text>
+    </view>
+    <view bind:tap="onBuy" class="buy btn-font">
+        <text>立即购买</text>
+    </view>
 </view>
