引入popup组件 隐藏滚动条

--- a/compoents/realm/realm.wxml
+++ b/compoents/realm/realm.wxml
@@ -1,5 +1,5 @@
 <wxs src="../../wxs/price.wxs" module="m"></wxs>
-<view class="container">
+<scroll-view class="container" scroll-y>
     <view class="sku-preview">
         <image src="{{previewImg}}" class="sku-img"></image>
         <view class="sku-description">
@@ -42,9 +42,7 @@
         <text>购买数量</text>
         <my-counter bind:lintap="onSelectCount"></my-counter>
     </view>
-
-
-</view>
+</scroll-view>
 
 <view wx:if="{{!isOutOfStock}}" class="bottom-btn">
     <text>加入购物车</text>
