--- a/compoents/cell/cell.wxss
+++ b/compoents/cell/cell.wxss
@@ -26,3 +26,9 @@
 .s-inner{
     background-color: #157658;
 }
+.img{
+    display: flex;
+    width: 44rpx;
+    height: 44rpx;
+    margin-right: 10rpx;
+}
