--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -1,5 +1,28 @@
+    <view>
+        <swiper class="top" autoplay indicator-dots>
+            <block wx:for="{{spuDetail.data.spu_img_list}}" wx:for-item="imgSrc" wx:key="id">
+                <swiper-item>
+                    <image class="top" mode="aspectFill" src="{{imgSrc.img}}"></image>
+                </swiper-item>
+            </block>
+        </swiper>
+
+        <my-spu-description spu="{{spuDetail}}"></my-spu-description>
+
+        <view  wx:if="{{!isNoSpecs}}" class="sku-pending">
+            <view class="specs">
+                <text wx:if="{{!isSkuIntact}}">请选择:</text>
+                <text wx:else>已选:</text>
+                <text wx:if="{{!isSkuIntact}}">{{missKeys}}</text>
+                <text wx:else>{{currentValues}}</text>
+            </view>
+            <view class="arrow-right">
+                <l-icon name="right" color="#157658" size="24"></l-icon>
+            </view>
+        </view>
+    </view>
     <l-popup show="{{showRealm}}" content-align="bottom">
-        <realm orderWay="{{orderWay}}" dataSpu="{{spuDetail}}"></realm>
+        <realm bind:specchange="onSpecChange" orderWay="{{orderWay}}" dataSpu="{{spuDetail}}"></realm>
     </l-popup>
     <my-tab-bar class="tabbar" bind:ongotohome="onGotoHome"
                                bind:ongotocart="onGotoCart"
