--- a/pages/category/category.wxml
+++ b/pages/category/category.wxml
@@ -1,2 +1,40 @@
-<!--pages/category/category.wxml-->
-<text>pages/category/category.wxml</text>
+<view class="container">
+    <view class="search-container">
+        <l-button shape="square"
+                  width="710" height="60"
+                  icon="research" icon-size="24" icon-color="#C4C9D2"
+                  l-class="search-btn"
+                  bind:lintap="onGoToSearch">
+            搜索商品
+        </l-button>
+    </view>
+    <view class="main">
+        <l-segment placement="left" item-height="100" l-class="left-segment" width="160"
+                   l-active-class="segment-item-active" l-inactive-class="segment-item">
+            <l-segment-item key="1" tab="战士"></l-segment-item>
+            <l-segment-item key="2" tab="术士"></l-segment-item>
+            <l-segment-item key="3" tab="法师"></l-segment-item>
+            <l-segment-item key="4" tab="牧师"></l-segment-item>
+            <l-segment-item key="5" tab="盗贼"></l-segment-item>
+
+            <l-segment-item key="1" tab="战士"></l-segment-item>
+            <l-segment-item key="2" tab="术士"></l-segment-item>
+            <l-segment-item key="3" tab="法师"></l-segment-item>
+            <l-segment-item key="4" tab="牧师"></l-segment-item>
+            <l-segment-item key="5" tab="盗贼"></l-segment-item>
+
+            <l-segment-item key="1" tab="战士"></l-segment-item>
+            <l-segment-item key="2" tab="术士"></l-segment-item>
+            <l-segment-item key="3" tab="法师"></l-segment-item>
+            <l-segment-item key="4" tab="牧师"></l-segment-item>
+            <l-segment-item key="5" tab="盗贼"></l-segment-item>
+
+            <l-segment-item key="1" tab="战士"></l-segment-item>
+            <l-segment-item key="2" tab="术士"></l-segment-item>
+            <l-segment-item key="3" tab="法师"></l-segment-item>
+            <l-segment-item key="4" tab="牧师"></l-segment-item>
+            <l-segment-item key="5" tab="盗贼"></l-segment-item>
+        </l-segment>
+        <scroll-view class="right"></scroll-view>
+    </view>
+</view>
