--- a/pages/category/category.wxss
+++ b/pages/category/category.wxss
@@ -1,1 +1,45 @@
-/* pages/category/category.wxss */
+page{
+    background-color: #ffffff;
+}
+.container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.search-container{
+    width:100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.search-btn{
+    background-color: #F1F1F1 !important;
+    color: #c4c9d2 !important;
+    font-size:24rpx !important;
+    font-weight: 400 !important;
+    border-radius: 4rpx !important;
+}
+.main{
+    margin-top: 20rpx;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border-top: 2rpx solid #f3f3f3;
+}
+.segment-item-active{
+    color: #157658 !important;
+    font-size: 26rpx !important;
+}
+.segment-item{
+    color: #666666 !important;
+    background-color: #ff88c2!important;
+    font-size:26rpx !important;
+}
+.left-segment{
+    height: calc(100vh - 82rpx) !important;
+}
+::-webkit-scrollbar {
+    width:0;
+    height:0;
+    color:transparent;
+}
