--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -1,2 +1,29 @@
-<!--pages/search/search.wxml-->
-<text>pages/search/search.wxml</text>
+<view class="heider">
+    <l-search-bar placeholder="输入商品名称"
+                  maxlength="9"
+                  bg-color="#f1f1f1"
+                  bind:linconfirm="onSearch">
+    </l-search-bar>
+</view>
+
+<view class="container">
+    <view>
+        <view class="history-container">
+            <view class="history-title">
+                <view class="slide"></view>
+                <text>历史搜索</text>
+                <view style="flex:1"></view>
+                <view style="margin-right: 40rpx">
+                    <l-icon name="delete" color="#999999" size="32"></l-icon>
+                </view>
+            </view>
+            <view class="history-tags">
+                <block wx:for="{{historyTags}}" wx:key="index">
+                    <l-tag name="{{item}}">
+
+                    </l-tag>
+                </block>
+            </view>
+        </view>
+    </view>
+</view>
