--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -8,20 +8,18 @@
 
 <view class="container">
     <view>
-        <view class="history-container">
+        <view class="history-container" wx:if="{{historyTags.length !== 0}}">
             <view class="history-title">
                 <view class="slide"></view>
                 <text>历史搜索</text>
                 <view style="flex:1"></view>
-                <view style="margin-right: 40rpx">
+                <view style="margin-right: 40rpx" bind:tap="onDeleteHistory">
                     <l-icon name="delete" color="#999999" size="32"></l-icon>
                 </view>
             </view>
             <view class="history-tags">
                 <block wx:for="{{historyTags}}" wx:key="index">
-                    <l-tag name="{{item}}">
-
-                    </l-tag>
+                    <l-tag name="{{item}}" l-class="tag">{{item}}</l-tag>
                 </block>
             </view>
         </view>
