--- a/pages/search/search.wxss
+++ b/pages/search/search.wxss
@@ -48,3 +48,9 @@ page{
     margin-right: 20rpx;
     margin-bottom: 20rpx;
 }
+.tag-seleced{
+    background-color: aqua !important;
+    color: #157658;
+    margin-right:20rpx;
+    margin-bottom: 20rpx;
+}
