--- a/compoents/spu-scroll/index.wxml
+++ b/compoents/spu-scroll/index.wxml
@@ -5,7 +5,7 @@
     <scroll-view class="scroll-container" scroll-x>
         <view class="inner">
             <block wx:for="{{spuList}}" wx:key="id">
-                <view class="spu-container">
+                <view class="spu-container" bindtap="spuDetail" id="{{item.id}}">
                     <image class="spu-img" src="{{item.img}}"></image>
                     <text class="spu-text">{{item.title.length>=8?s.substring(item.title,0,7)+"...":item.title}}</text>
                     <l-price value="{{p.mainPrice(item.price,item.discount_price)}}" l-unit-class="unit" l-value-class="value"></l-price>
